force-app/main/default/objects/Client__c/Client__c.object-meta.xml
<CustomObject>
    <description>All the client related details is present in this object</description>
    <label>Client</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Client Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>