force-app/main/default/objects/Client__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field contain s the briefing of the client</description>
    <inlineHelpText>information of client</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>