force-app/main/default/objects/Client__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>This field having the emailof a contact</description>
    <inlineHelpText>Email client</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>