force-app/main/default/objects/Client__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>This field having the mobile number</description>
    <inlineHelpText>mobile number</inlineHelpText>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>