force-app/main/default/objects/Client__c/fields/Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact__c</fullName>
    <description>this field having the contact</description>
    <inlineHelpText>contact field</inlineHelpText>
    <label>Point of Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>