force-app/main/default/objects/Client__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field show the active and inactive status of client</description>
    <inlineHelpText>status of the client</inlineHelpText>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>