force-app/main/default/objects/Client__c/validationRules/CheckBoxVali.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckBoxVali</fullName>
    <active>false</active>
    <description>This validation makes the active check box required</description>
    <errorConditionFormula>NOT( Status__c )</errorConditionFormula>
    <errorMessage>Status check box must be required</errorMessage>
</ValidationRule>